--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^18",
     "recharts": "^3.7.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.11"
